[package]
name = "lockout-channel"
version = "0.1.1"
edition = "2024"
description = "Lock-free unbounded MPMC channel using hazard pointers"
license = "MIT"
repository = "https://github.com/MichaelDuPlessis/lockout"
keywords = ["channel", "mpmc", "lock-free", "concurrency"]
categories = ["concurrency", "data-structures"]
readme = "README.md"

[dependencies]
lockout-hazard = "0.1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"

[[bench]]
name = "mpmc_throughput"
harness = false
