[package]
name = "lockout-channel"
version = "0.2.1"
edition = "2024"
description = "Lock-free unbounded MPMC channel using hazard pointers"
license = "MIT"
repository = "https://github.com/MichaelDuPlessis/lockout"
keywords = ["channel", "mpmc", "lock-free", "concurrency"]
categories = ["concurrency", "data-structures"]
readme = "README.md"

[dependencies]
lockout-hazard = { version = "0.1", path = "../lockout-hazard" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"

[[bench]]
name = "mpmc_throughput"
harness = false
